// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApolloContainerUI Snapshots matches query 1`] = `undefined`;

exports[`ApolloContainerUI Snapshots renders correctly 1`] = `
<View>
  N/A
</View>
`;

exports[`ApolloContainerUI Snapshots renders correctly when error present 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "red",
      }
    }
  >
    Oops!
  </Text>
</View>
`;

exports[`ApolloContainerUI Snapshots renders correctly when loading 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
  >
    Loading...
  </Text>
</View>
`;

exports[`ApolloContainerUI Snapshots renders correctly when not loading and repository present 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Object {
        "color": "blue",
        "fontSize": 16,
        "marginBottom": 5,
        "marginTop": 5,
        "textDecorationColor": "blue",
        "textDecorationLine": "underline",
        "textDecorationStyle": "solid",
      }
    }
  >
    Sumfin
  </Text>
</View>
`;
